--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+ <div class="header">
+  <h1>Social bubble</h1>
+  
   </head>
+ 
   <body>
-   
+<div class="topnav">
+  <a class="active" href="#Wat is een social bubble?">Wat is een social bubble?</a>
+  <a href="#Zit jij in een social bubble?">Zit jij in een social bubble?</a>
+  <a href="#contact">Contact</a>
+</div>
+
+</div>
+Wat is een social bubble?
+</p>tekst over wat is een social bubble.</p>
+Zit jij in een social bubble?
+</p>Haal je vrienden even voor de geest. Zijn jullie net zo oud? En denken jullie hetzelfde over politiek? Als je deze vragen met ja kunt beantwoorden, zit je waarschijnlijk in een flinke bubbel. Correctie: een sociale bubbel. De BBC liet twintigduizend mensen uit verschillende landen een test maken over vriendschap. In de test worden vragen gesteld als: “Verdienen je vrienden ongeveer hetzelfde als jij?” En: “Voel je je comfortabeler in een groep met mensen die veel op je lijken?” De uitkomsten zijn verrassend. Zo stelt de helft van de ondervraagden dat het belangrijk is om te luisteren naar mensen met een ander standpunt. Toch gebeurt dat meestal niet. Glenn Gottfried begeleidde het onderzoek en kwam tot een interessante conclusie: “Er is een behoorlijke kloof tussen wat we dénken dat goed is voor de samenleving, en wat we daadwerkelijk doen”. Iets minder dan de helft van de respondenten zegt dat de meeste van hun vrienden vergelijkbare ideeën of overtuigingen heeft over thema’s als klimaatverandering, religie, immigratie en feminisme. Dat is een stuk minder als het gaat om politieke standpunten. Een op de vijf spreekt maar een keer per maand met iemand die een andere politieke mening heeft. Een op de tien zelfs nooit. De meerderheid van de respondenten heeft vooral vrienden van dezelfde afkomst. En bij iets minder dan de helft zijn ze van dezelfde leeftijd. De test laat mooi zien dat we geneigd zijn vriendschappen te sluiten met mensen die op ons lijken. De sociale bubbel is geboren. Zelf hebben de deelnemers het idee dat hun sociale kring een stuk diverser is dan de test laat zien. Gottfried: “Mensen blijven graag optimistisch, ze denken blijkbaar zelf wel dat ze heel divers en tolerant zijn.” Iets om over na te denken dus. En hoe zit het bij jou? Je kunt de test doen via de link hieronder. https://www.bbc.com/news/world-47403815</p>
+
   </body>
 </html>
