--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>repl.it</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<div class="header">
-    <img src= "https://miro.medium.com/max/670/1*2m7lq1MIw5jlaEnSJIU4rA.jpeg" width= 300 height= 200>
+		<img src= "https://miro.medium.com/max/670/1*2m7lq1MIw5jlaEnSJIU4rA.jpeg" width= 300 height= 200>
 		<h1>Social bubble</h1>
 
 
@@ -23,6 +23,7 @@
 	</div>
 	Wat is een social bubble?
 	</p>tekst over wat is een social bubble.</p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/Zk1o2BpC79g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	Zit jij in een social bubble?
 	</p>Haal je vrienden even voor de geest. Zijn jullie net zo oud? En denken jullie hetzelfde over politiek? Als je deze vragen
 	met ja kunt beantwoorden, zit je waarschijnlijk in een flinke bubbel. Correctie: een sociale bubbel. De BBC liet twintigduizend
