Formulier bij contact toegevoegd

--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
 </head>
 
 <body>
-	<div class="topnav">
-		<a class="active" href="#Wat is een social bubble?">Wat is een social bubble?</a>
-		<a href="#Zit jij in een social bubble?">Zit jij in een social bubble?</a>
-		<a href="#contact">Contact</a>
-	</div>
+<nav>
+  <a href="/Wat is een social bubble?/">Wat is een social bubble?</a> |
+  <a href="/Zit jij in een social bubble?/">Zit jij in een social bubble?</a> |
+  <a href="/Contact/">Contact</a> |
+</nav>
 
 	</div>
+
 	Wat is een social bubble?
 	</p>tekst over wat is een social bubble.</p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/Zk1o2BpC79g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	Zit jij in een social bubble?
+  </p>Zit jij in een social bubble?
 	</p>Haal je vrienden even voor de geest. Zijn jullie net zo oud? En denken jullie hetzelfde over politiek? Als je deze vragen
 	met ja kunt beantwoorden, zit je waarschijnlijk in een flinke bubbel. Correctie: een sociale bubbel. De BBC liet twintigduizend
 	mensen uit verschillende landen een test maken over vriendschap. In de test worden vragen gesteld als: “Verdienen je vrienden
@@ -41,6 +42,20 @@
 	zien. Gottfried: “Mensen blijven graag optimistisch, ze denken blijkbaar zelf wel dat ze heel divers en tolerant zijn.”
 	Iets om over na te denken dus. En hoe zit het bij jou? Je kunt de test doen via
 	<a href="https://www.bbc.com/news/world-47403815">deze link.</a></p>
+</p>Contact</p>
+<form action="/action_page.php">
+  <label for="fname">Voornaam:</label><br>
+  <input type="text" id="fname" name="fname" value="John"><br>
+  <label for="lname">Achternaam:</label><br>
+  <input type="text" id="lname" name="lname" value="Janssen"><br><br>
+  <label for="fname">Telefoonnummer:</label><br>
+  <input type="text" id="fname" name="fname" value="+31 6 "><br>
+  <label for="fname">E-mail:</label><br>
+  <input type="text" id="fname" name="fname" value="JohnJanssen@gmail.com"><br>
+  <label for="fname">Land:</label><br>
+  <input type="text" id="fname" name="fname" value="Nederland"><br>
+  <input type="submit" value="Submit">
+</form>
 
 </body>
 
