<hr> toegevoegd, dus strepen onder de verschillende stukjes.

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
 	</div>
 
-	Wat is een social bubble?
+	</h2>Wat is een social bubble?</h2>
 	</p>Internetgebruikers opgepast, je kunt zomaar in een social bubble belanden. Algoritmen die menen te weten wat jou interesseert, creëren een comfortabele luchtbel waar alleen behaaglijke inhoud binnensijpelt. Zonder dat je er erg in hebt, kom je vooral meningen en nieuws tegen die jouw wereldbeeld bevestigen, terwijl andere perspectieven zijn weggefilterd.
-De term social bubble werd gemunt door internetactivist Eli Pariser, in zijn wereldberoemde boek uit 2011. Het door hem geschetste beeld duikt nog altijd op in verhalen over de groeiende macht van sociale media. Zeker nu personalisatie steeds vaker voorkomt: nieuwsdienst Blendle raadt gebruikers onder meer artikelen aan op basis van hun interesses, Het Financieele Dagblad werkt aan gepersonaliseerde nieuwsbrieven. Het gebruik van deze sociale media zorgt voor oogkleppen. Door de algoritmes die bepalen welke content we zien zitten we in onze eigen social media bubbels. We worden bijna niet meer geconfronteerd met meningen of ontwikkelingen die niet aansluiten bij onze voorkeuren. Zo wordt de content die we zien een echo van wat we zelf communiceren. Je zou kunnen zeggen dat er ook ethische richtlijnen moeten komen over het gebruik van algoritmen door (sociale) media. Maar uiteindelijk is het natuurlijk ook onze eigen verantwoordelijkheid door welke bronnen we ons laten voeden en welke content we consumeren. Toch is bewezen dat we met name op zoek zijn naar meningen die de onze onderschrijven en we al snel onze ogen sluiten voor argumenten die dit tegenspreken. 
-</p>
+De term social bubble werd gemunt door internetactivist Eli Pariser, in zijn wereldberoemde boek uit 2011. Het door hem geschetste beeld duikt nog altijd op in verhalen over de groeiende macht van sociale media. Zeker nu personalisatie steeds vaker voorkomt: nieuwsdienst Blendle raadt gebruikers onder meer artikelen aan op basis van hun interesses, Het Financieele Dagblad werkt aan gepersonaliseerde nieuwsbrieven. Het gebruik van deze sociale media zorgt voor oogkleppen. Door de algoritmes die bepalen welke content we zien zitten we in onze eigen social media bubbels. We worden bijna niet meer geconfronteerd met meningen of ontwikkelingen die niet aansluiten bij onze voorkeuren. Zo wordt de content die we zien een echo van wat we zelf communiceren. Je zou kunnen zeggen dat er ook ethische richtlijnen moeten komen over het gebruik van algoritmen door (sociale) media. Maar uiteindelijk is het natuurlijk ook onze eigen verantwoordelijkheid door welke bronnen we ons laten voeden en welke content we consumeren. Toch is bewezen dat we met name op zoek zijn naar meningen die de onze onderschrijven en we al snel onze ogen sluiten voor argumenten die dit tegenspreken. </p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/Zk1o2BpC79g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </p>Zit jij in een social bubble?
+  <hr>
+  </h3>Zit jij in een social bubble?</h3>
 	</p>Haal je vrienden even voor de geest. Zijn jullie net zo oud? En denken jullie hetzelfde over politiek? Als je deze vragen
 	met ja kunt beantwoorden, zit je waarschijnlijk in een flinke bubbel. Correctie: een sociale bubbel. De BBC liet twintigduizend
 	mensen uit verschillende landen een test maken over vriendschap. In de test worden vragen gesteld als: “Verdienen je vrienden
@@ -44,7 +44,8 @@ De term social bubble werd gemunt door internetactivist Eli Pariser, in zijn wer
 	zien. Gottfried: “Mensen blijven graag optimistisch, ze denken blijkbaar zelf wel dat ze heel divers en tolerant zijn.”
 	Iets om over na te denken dus. En hoe zit het bij jou? Je kunt de test doen via
 	<a href="https://www.bbc.com/news/world-47403815">deze link.</a></p>
-</p>Contact</p>
+  <hr>
+</h4>Contact</h4>
 <form action="/action_page.php">
   <label for="fname">Voornaam:</label><br>
   <input type="text" id="fname" name="fname" value="John"><br>
