--- a/index.html
+++ b/index.html
@@ -8,8 +8,23 @@
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<div class="header">
 		<img src= "https://miro.medium.com/max/670/1*2m7lq1MIw5jlaEnSJIU4rA.jpeg" width= 300 height= 200>
-		<h1>Social bubble</h1>
+    <h1>Social bubble</h1>
+<nav class="page-nav">
+        <ul>
+          <li>
+            <a href="#Wat is een social bubble?">Wat is een social bubble?</a>
+          </li>
 
+        </ul>
+
+        <li>
+            <a href="#Zit jij in een social bubble?">Zit jij in een social bubble?</a>
+          </li>
+          <li>
+            <a href="#contact">Contact</a>
+          </li>
+
+      </nav>
 
 </head>
 
@@ -21,12 +36,13 @@
 </nav>
 
 	</div>
-
+<div id="Wat is een social bubble?">
 	</h2>Wat is een social bubble?</h2>
 	</p>Internetgebruikers opgepast, je kunt zomaar in een social bubble belanden. Algoritmen die menen te weten wat jou interesseert, creëren een comfortabele luchtbel waar alleen behaaglijke inhoud binnensijpelt. Zonder dat je er erg in hebt, kom je vooral meningen en nieuws tegen die jouw wereldbeeld bevestigen, terwijl andere perspectieven zijn weggefilterd.
 De term social bubble werd gemunt door internetactivist Eli Pariser, in zijn wereldberoemde boek uit 2011. Het door hem geschetste beeld duikt nog altijd op in verhalen over de groeiende macht van sociale media. Zeker nu personalisatie steeds vaker voorkomt: nieuwsdienst Blendle raadt gebruikers onder meer artikelen aan op basis van hun interesses, Het Financieele Dagblad werkt aan gepersonaliseerde nieuwsbrieven. Het gebruik van deze sociale media zorgt voor oogkleppen. Door de algoritmes die bepalen welke content we zien zitten we in onze eigen social media bubbels. We worden bijna niet meer geconfronteerd met meningen of ontwikkelingen die niet aansluiten bij onze voorkeuren. Zo wordt de content die we zien een echo van wat we zelf communiceren. Je zou kunnen zeggen dat er ook ethische richtlijnen moeten komen over het gebruik van algoritmen door (sociale) media. Maar uiteindelijk is het natuurlijk ook onze eigen verantwoordelijkheid door welke bronnen we ons laten voeden en welke content we consumeren. Toch is bewezen dat we met name op zoek zijn naar meningen die de onze onderschrijven en we al snel onze ogen sluiten voor argumenten die dit tegenspreken. </p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/Zk1o2BpC79g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <hr>
+  <div id="Zit jij in een social bubble?">
   </h3>Zit jij in een social bubble?</h3>
 	</p>Haal je vrienden even voor de geest. Zijn jullie net zo oud? En denken jullie hetzelfde over politiek? Als je deze vragen
 	met ja kunt beantwoorden, zit je waarschijnlijk in een flinke bubbel. Correctie: een sociale bubbel. De BBC liet twintigduizend
@@ -45,6 +61,7 @@ De term social bubble werd gemunt door internetactivist Eli Pariser, in zijn wer
 	Iets om over na te denken dus. En hoe zit het bij jou? Je kunt de test doen via
 	<a href="https://www.bbc.com/news/world-47403815">deze link.</a></p>
   <hr>
+  <div id="contact">
 </h4>Contact</h4>
 <form action="/action_page.php">
   <label for="fname">Voornaam:</label><br>
