Navigatie zonder bullets en kleur als je erover heen gaat met muis.

--- a/index.html
+++ b/index.html
@@ -7,33 +7,20 @@
 	<title>repl.it</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<div class="header">
-		<img src= "https://miro.medium.com/max/670/1*2m7lq1MIw5jlaEnSJIU4rA.jpeg" width= 300 height= 200>
+		<div class="page-content">
+			<img src= "https://miro.medium.com/max/670/1*2m7lq1MIw5jlaEnSJIU4rA.jpeg" width= 300 height= 200>
     <h1>Social bubble</h1>
 <nav class="page-nav">
         <ul>
-          <li>
-            <a href="#Wat is een social bubble?">Wat is een social bubble?</a>
-          </li>
-
-        </ul>
-
-        <li>
-            <a href="#Zit jij in een social bubble?">Zit jij in een social bubble?</a>
-          </li>
-          <li>
-            <a href="#contact">Contact</a>
-          </li>
-
+            <li><a href="#Wat is een social bubble?">Wat is een social bubble?</a>
+            <li><a href="#Zit jij in een social bubble?">Zit jij in een social bubble?</a>
+            <li><a href="#contact">Contact</a>
+ <ul>
       </nav>
 
 </head>
 
 <body>
-<nav>
-  <a href="/Wat is een social bubble?/">Wat is een social bubble?</a> |
-  <a href="/Zit jij in een social bubble?/">Zit jij in een social bubble?</a> |
-  <a href="/Contact/">Contact</a> |
-</nav>
 
 	</div>
 <div id="Wat is een social bubble?">
