afbeelding toegevoegd en oudere afbeelding op andere plek.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<div class="header">
 		<div class="page-content">
-			<img src= "https://miro.medium.com/max/670/1*2m7lq1MIw5jlaEnSJIU4rA.jpeg" width= 300 height= 200>
+			<img src= "https://www.marketingfacts.nl/images/made/c5017d38a4a2676a/2b1c2c05cd8279b85d9f106e0c34ea82d7522b63.jpg" width= 600 height= 300>
     <h1>Social bubble</h1>
 <nav class="page-nav">
         <ul>
@@ -46,7 +46,7 @@ De term social bubble werd gemunt door internetactivist Eli Pariser, in zijn wer
 	sociale bubbel is geboren. Zelf hebben de deelnemers het idee dat hun sociale kring een stuk diverser is dan de test laat
 	zien. Gottfried: “Mensen blijven graag optimistisch, ze denken blijkbaar zelf wel dat ze heel divers en tolerant zijn.”
 	Iets om over na te denken dus. En hoe zit het bij jou? Je kunt de test doen via
-	<a href="https://www.bbc.com/news/world-47403815">deze link.</a></p>
+	<a href="https://www.bbc.com/news/world-47403815">deze link.</a></p> <img src= "https://miro.medium.com/max/670/1*2m7lq1MIw5jlaEnSJIU4rA.jpeg" width= 300 height= 200>
   <hr>
   <div id="contact">
 </h4>Contact</h4>
