Extra onderdeel toegevoegd, namelijk social media gebuikers. Link in navigatie werkend gemaakt.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <ul>
             <li><a href="#Wat is een social bubble?">Wat is een social bubble?</a>
             <li><a href="#Zit jij in een social bubble?">Zit jij in een social bubble?</a>
+            <li><a href="#Social media gebruikers">Social media gebruikers </a> 
             <li><a href="#contact">Contact</a>
  <ul>
       </nav>
@@ -48,8 +49,11 @@ De term social bubble werd gemunt door internetactivist Eli Pariser, in zijn wer
 	Iets om over na te denken dus. En hoe zit het bij jou? Je kunt de test doen via
 	<a href="https://www.bbc.com/news/world-47403815">deze link.</a></p> <img src= "https://miro.medium.com/max/670/1*2m7lq1MIw5jlaEnSJIU4rA.jpeg" width= 300 height= 200>
   <hr>
+<div id="Social media gebruikers">
+	</h4>Social media gebuikers</h4>
+  <hr>
   <div id="contact">
-</h4>Contact</h4>
+</h5>Contact</h5>
 <form action="/action_page.php">
   <label for="fname">Voornaam:</label><br>
   <input type="text" id="fname" name="fname" value="John"><br>
