Tabel toegevoegd in html

--- a/index.html
+++ b/index.html
@@ -51,6 +51,40 @@ De term social bubble werd gemunt door internetactivist Eli Pariser, in zijn wer
   <hr>
 <div id="Social media gebruikers">
 	</h4>Social media gebuikers</h4>
+  <table style="width:100%">
+  <tr>
+    <th>Naam</th>
+    <th>Aantal actieve gebruikers per maand</th>
+  </tr>
+  <tr>
+    <td>Facebook</td>
+    <td>2.45 biljoen</td>
+  </tr>
+  <tr>
+    <td>Youtube</td>
+    <td>2.00 biljoen</td>
+  </tr>
+   <tr>
+    <td>Whatsapp</td>
+    <td>1.60 biljoen</td>
+  </tr>
+  <tr>
+    <td>Facebook Messenger</td>
+    <td>1.30 biljoen</td>
+  </tr>
+  <tr>
+    <td>WeChat</td>
+    <td>1.15 biljoen</td>
+  </tr>
+  <tr>
+    <td>Instagram</td>
+    <td>1.00 biljoen</td>
+  </tr>
+   <tr>
+    <td>TikTok</td>
+    <td>800 miljoen</td>
+  </tr>
+</table>
   <hr>
   <div id="contact">
 </h5>Contact</h5>
