Bij de tabel biljoen veranderd naar miljard.

--- a/index.html
+++ b/index.html
@@ -58,27 +58,27 @@ De term social bubble werd gemunt door internetactivist Eli Pariser, in zijn wer
   </tr>
   <tr>
     <td>Facebook</td>
-    <td>2.45 biljoen</td>
+    <td>2.45 miljard</td>
   </tr>
   <tr>
     <td>Youtube</td>
-    <td>2.00 biljoen</td>
+    <td>2.00 miljard</td>
   </tr>
    <tr>
     <td>Whatsapp</td>
-    <td>1.60 biljoen</td>
+    <td>1.60 miljard</td>
   </tr>
   <tr>
     <td>Facebook Messenger</td>
-    <td>1.30 biljoen</td>
+    <td>1.30 miljard</td>
   </tr>
   <tr>
     <td>WeChat</td>
-    <td>1.15 biljoen</td>
+    <td>1.15 miljard</td>
   </tr>
   <tr>
     <td>Instagram</td>
-    <td>1.00 biljoen</td>
+    <td>1.00 miljard</td>
   </tr>
    <tr>
     <td>TikTok</td>
