favicon toegevoegd, afbeelding .ico in de map images.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>repl.it</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
+   <link rel='icon' href='/images/favicon_soc_bub.ico'/>
 	<div class="header">
 		<div class="page-content">
 			<img src= "https://www.marketingfacts.nl/images/made/c5017d38a4a2676a/2b1c2c05cd8279b85d9f106e0c34ea82d7522b63.jpg" width= 600 height= 300>
