over ons toegevoegd in navigatie menu

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="#Zit jij in een social bubble?">Zit jij in een social bubble?</a>
             <li><a href="#Social media gebruikers">Social media gebruikers </a> 
             <li><a href="#contact">Contact</a>
+            <li><a href="#./overons.html">Over ons</a>
  <ul>
       </nav>
 
