--- a/overons.html
+++ b/overons.html
@@ -11,7 +11,7 @@
 <div class="page ">
 <header class="nav-header ">
 <nav class="main-nav ">
-<a href="./index.html ">Terug naar Social Bubble</a>
+<a href="./index.html ">Terug naar homepage Social Bubble</a>
 </nav>
 </header>
 <div class="page-content ">
