tekst toegevoegd overons + linkje veranderd, veranderd in overons html

--- a/overons.html
+++ b/overons.html
@@ -20,15 +20,15 @@
   <h2>Over Dymphna</h2>
   <img src=" https://gm1.ggpht.com/vWI-_XPFsbqVRJKFXRVxD3dyedrbR9LX9RX6BOccoiiqFDAWQUvK5_qgU0F6IiPVbHKHbcdcbMPAjBxuqATEJ9oTWXEHmeBgHGJZRnbjjOJubYz2Olh96g6j2F2gmqIBNzeRigvhIwdBrSPZswxNhEc-Yo0dHgjSN77bKjwQx1GEhxx5Y9URXsPrnVFnVQEXfeGtZwxmCO7C43rKnpq2ewOZhX2cZIpMlqw6-Wtlvebf0H7bbmfrSQS25oMWjzd2Q-ug78lf3tKMQGF_7XkBQxiQwS3OFPTv3HTus_zIIvGcKSvVfNKDvJ9cwK8gNWfwJxS2ld6GEIwQrzljIFLVfLbOM3e0LpJ1uDzgtcT8SHIfo1VKBVY8JUfrSGTOcWW97PgYNYRrSshaLhsLpJl9xwHDo6yNmETA2anaNu24fDZaNwU_pAawz23OM8c5Bo-EeoebHREM9yVe5QrGFKzUkATFskzLXRTIk0jxvqB72aTIBSjRUJUZw2EpEwNjEZUqet1mXT6BA7-gsvyazhK8wWmvSQI_OAzUx4MWH-E4KHe-g0vjggqXwq5yfpo2YgjbhFSJXOEfjculSQsB_ya0JGpsGo6LPGladFXzfbSNYQARlu-gIYYOPmKhIQpRcruXCFJAjPeQDygpIMSTdVduoPanmjfywuPboHa5nD0UwQg6vW7oSOajnoHXLV8K-PHvuUPSPIgq2M-jfcJ79LjbnLXS6UNstvlwVYtwKGAoM6CHojFTWTvx8X5qJdPk3ioP0mE=s0-l75-ft-l75-ft "width= 600 height= 300>
 <p>
-Mijn naam is <b>Dymphna Geels.</b> Ik woon in Voorburg. Ik vind het leuk om te voetballen, ik speel voor Forum Sport. Ik train 2 keer per week en op zaterdag heb ik een westrijd. Ik zit op het Sint-Maartenscollege in Voorburg in 4 vwo. 
+Mijn naam is <b>Dymphna Geels.</b> Ik woon in Voorburg. Ik vind het leuk om te voetballen, ik speel voor Forum Sport. Ik train 2 keer per week en op zaterdag heb ik een wedstrijd. Ik zit op het Sint-Maartenscollege in Voorburg in 4 vwo. 
 </p>
 <a href="http://www.forumsport.nl " target="_blank ">Learn More</a>
 
 
 <h3>Over Isabeau</h3>
 <p>
-Mijn naam is <b>Isabeau Rikkoert.</b> I woon in ....
+Mijn naam is <b>Isabeau Rikkoert.</b> I woon in Leidschenveen. Ik vind het leuk om met mijn vrienden af te spreken en doe aan turnen. Elke maandag en woensdag geef ik training aan de selectie van DEO in Nootdorp en elke vrijdag train ik zelf bij AVGV in Voorburg. Ik zit op het Sint-Maartenscollege in Voorburg bij Dymphna in het jaar. 
 </p>
-<a href="http://www.voorburg.nl " target="_blank ">Learn More</a>
+<a href="http://www.deogym.nl " target="_blank ">Learn More</a>
 </body>
 </html>
