favicon over ons pagina toegevoegd

--- a/overons.html
+++ b/overons.html
@@ -5,7 +5,7 @@
   <title>Social Bubble</title>
   <link href="https://fonts.googleapis.com/css?family='Open Sans', sans-serif rel=" stylesheet ">
 <link rel="stylesheet " href="overons.css ">
-<link rel='icon' href='favicon_soc_bub.ico'/ >
+<link rel='icon' href='/images/favicon_soc_bub.ico' />
 </head>
 <body>
 <div class="page ">
