kleine aanpassingen in index.html en navigatie menu sticky gemaakt.

--- a/index.html
+++ b/index.html
@@ -7,26 +7,29 @@
 	<title>repl.it</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel='icon' href='/images/favicon_soc_bub.ico' />
-	<div class="header">
-		<div class="page-content">
-			<img src= "https://www.marketingfacts.nl/images/made/c5017d38a4a2676a/2b1c2c05cd8279b85d9f106e0c34ea82d7522b63.jpg" width= 600 height= 300>
-    <h1>Social bubble</h1>
-<nav class="page-nav">
-        <ul>
-            <li><a href="#Wat is een social bubble?">Wat is een social bubble?</a>
-            <li><a href="#Zit jij in een social bubble?">Zit jij in een social bubble?</a>
-            <li><a href="#Social media gebruikers">Social media gebruikers </a> 
-            <li><a href="#contact">Contact</a>
-            <li><a href="overons.html">Over ons</a>
- <ul>
-      </nav>
-
 </head>
 
 <body>
-
+	<div class="page-nav">
+		<nav class="sticky">
+			<ul>
+				<li><a href="#Wat is een social bubble?">Wat is een social bubble?</a>
+					<li><a href="#Zit jij in een social bubble?">Zit jij in een social bubble?</a>
+						<li><a href="#Social media gebruikers">Social media gebruikers </a>
+							<li><a href="#contact">Contact</a>
+								<li><a href="overons.html">Over ons</a>
+									<ul>
+		</nav>
 	</div>
-<div id="Wat is een social bubble?">
+	<div class="content">
+		<div class="header">
+			<div class="page-content">
+				<img src= "https://www.marketingfacts.nl/images/made/c5017d38a4a2676a/2b1c2c05cd8279b85d9f106e0c34ea82d7522b63.jpg" width= 600 height= 300>
+			<h1>Social bubble</h1>
+		</div>
+	</div>
+
+    <div id="Wat is een social bubble?">
 	</h2>Wat is een social bubble?</h2>
 	</p>Internetgebruikers opgepast, je kunt zomaar in een social bubble belanden. Algoritmen die menen te weten wat jou interesseert, creëren een comfortabele luchtbel waar alleen behaaglijke inhoud binnensijpelt. Zonder dat je er erg in hebt, kom je vooral meningen en nieuws tegen die jouw wereldbeeld bevestigen, terwijl andere perspectieven zijn weggefilterd. </p>
 De term social bubble werd gemunt door internetactivist Eli Pariser, in zijn wereldberoemde boek uit 2011. Het door hem geschetste beeld duikt nog altijd op in verhalen over de groeiende macht van sociale media. Zeker nu personalisatie steeds vaker voorkomt: nieuwsdienst Blendle raadt gebruikers onder meer artikelen aan op basis van hun interesses, Het Financieele Dagblad werkt aan gepersonaliseerde nieuwsbrieven. Het gebruik van deze sociale media zorgt voor oogkleppen. Door de algoritmes die bepalen welke content we zien zitten we in onze eigen social media bubbels. We worden bijna niet meer geconfronteerd met meningen of ontwikkelingen die niet aansluiten bij onze voorkeuren. Zo wordt de content die we zien een echo van wat we zelf communiceren. </p>
@@ -90,22 +93,23 @@ Je zou kunnen zeggen dat er ook ethische richtlijnen moeten komen over het gebru
   </tr>
 </table>
   <hr>
-  <div id="contact">
-</h5>Contact</h5>
-<form action="/action_page.php">
-  <label for="fname">Voornaam:</label><br>
-  <input type="text" id="fname" name="fname" value="John"><br>
-  <label for="lname">Achternaam:</label><br>
-  <input type="text" id="lname" name="lname" value="Janssen"><br><br>
-  <label for="fname">Telefoonnummer:</label><br>
-  <input type="text" id="fname" name="fname" value="+31 6 "><br>
-  <label for="fname">E-mail:</label><br>
-  <input type="text" id="fname" name="fname" value="JohnJanssen@gmail.com"><br>
-  <label for="fname">Land:</label><br>
-  <input type="text" id="fname" name="fname" value="Nederland"><br>
-  <input type="submit" value="Submit">
-</form>
-
+    <div id="contact">
+		<h5>Contact</h5>
+		<form action="/action_page.php">
+		  <label for="fname">Voornaam:</label><br>
+		  <input type="text" id="fname" name="fname" value="John"><br>
+		  <label for="lname">Achternaam:</label><br>
+		  <input type="text" id="lname" name="lname" value="Janssen"><br><br>
+		  <label for="fname">Telefoonnummer:</label><br>
+		  <input type="text" id="fname" name="fname" value="+31 6 "><br>
+		  <label for="fname">E-mail:</label><br>
+		  <input type="text" id="fname" name="fname" value="JohnJanssen@gmail.com"><br>
+		  <label for="fname">Land:</label><br>
+		  <input type="text" id="fname" name="fname" value="Nederland"><br>
+		  <input type="submit" value="Submit">
+		</form>
+	</div>
+  </div>
 </body>
 
 </html>
