--- a/overons.html
+++ b/overons.html
@@ -18,7 +18,7 @@
 <h1>Over ons</h1>
  
  <h2>Over Dymphna</h2>
- <img src=" https://gm1.ggpht.com/vWI-_XPFsbqVRJKFXRVxD3dyedrbR9LX9RX6BOccoiiqFDAWQUvK5_qgU0F6IiPVbHKHbcdcbMPAjBxuqATEJ9oTWXEHmeBgHGJZRnbjjOJubYz2Olh96g6j2F2gmqIBNzeRigvhIwdBrSPZswxNhEc-Yo0dHgjSN77bKjwQx1GEhxx5Y9URXsPrnVFnVQEXfeGtZwxmCO7C43rKnpq2ewOZhX2cZIpMlqw6-Wtlvebf0H7bbmfrSQS25oMWjzd2Q-ug78lf3tKMQGF_7XkBQxiQwS3OFPTv3HTus_zIIvGcKSvVfNKDvJ9cwK8gNWfwJxS2ld6GEIwQrzljIFLVfLbOM3e0LpJ1uDzgtcT8SHIfo1VKBVY8JUfrSGTOcWW97PgYNYRrSshaLhsLpJl9xwHDo6yNmETA2anaNu24fDZaNwU_pAawz23OM8c5Bo-EeoebHREM9yVe5QrGFKzUkATFskzLXRTIk0jxvqB72aTIBSjRUJUZw2EpEwNjEZUqet1mXT6BA7-gsvyazhK8wWmvSQI_OAzUx4MWH-E4KHe-g0vjggqXwq5yfpo2YgjbhFSJXOEfjculSQsB_ya0JGpsGo6LPGladFXzfbSNYQARlu-gIYYOPmKhIQpRcruXCFJAjPeQDygpIMSTdVduoPanmjfywuPboHa5nD0UwQg6vW7oSOajnoHXLV8K-PHvuUPSPIgq2M-jfcJ79LjbnLXS6UNstvlwVYtwKGAoM6CHojFTWTvx8X5qJdPk3ioP0mE=s0-l75-ft-l75-ft "width= 600 height= 300>
+ <img src="https://z-p3-scontent-amt2-1.xx.fbcdn.net/v/t1.0-9/67659763_2362654283789613_4037330225300766720_n.jpg?_nc_cat=102&_nc_sid=85a577&_nc_ohc=XmKtTm8pWHQAX9Hmi0u&_nc_ht=z-p3-scontent-amt2-1.xx&oh=f621cf2b097e589678f7d33eba0be3b4&oe=5EA1BCC6"width= 600 height= 300>
 <p>
 Mijn naam is <b>Dymphna Geels.</b> Ik woon in Voorburg. Ik vind het leuk om te voetballen, ik speel voor Forum Sport. Ik train 2 keer per week en op zaterdag heb ik een westrijd. Ik zit op het Sint-Maartenscollege in Voorburg in 4 vwo.
 </p>
