Navigatiemenu op pagina over ons toegevoegd

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="page-nav">
 		<nav class="sticky">
 			<ul>
-				<li><a href="#Wat is een social bubble?">Wat is een social bubble?</a>
+				<li><a href="#Wat is een social bubble">Wat is een social bubble?</a>
 					<li><a href="#Zit jij in een social bubble?">Zit jij in een social bubble?</a>
 						<li><a href="#Social media gebruikers">Social media gebruikers </a>
 							<li><a href="#contact">Contact</a>
