--- a/overons.html
+++ b/overons.html
@@ -13,7 +13,19 @@
 <nav class="main-nav ">
 <a href="./index.html ">Terug naar homepage Social Bubble</a>
 </nav>
-</header>
+<div class="page-nav">
+		<nav class="sticky">
+			<ul>
+				<li><a href="#Wat is een social bubble">Wat is een social bubble?</a>
+					<li><a href="#Zit jij in een social bubble?">Zit jij in een social bubble?</a>
+						<li><a href="#Social media gebruikers">Social media gebruikers </a>
+							<li><a href="#contact">Contact</a>
+								<li><a href="overons.html">Over ons</a>
+									<ul>
+		</nav>
+	</div>
+<div class="content">
+		<div class="header">
 <div class="page-content ">
 <h1>Over ons</h1>
  
