Navigatiemenu werkend gemaakt

--- a/overons.html
+++ b/overons.html
@@ -8,19 +8,14 @@
 <link rel='icon' href='/images/favicon_soc_bub.ico' />
 </head>
 <body>
-<div class="page ">
-<header class="nav-header ">
-<nav class="main-nav ">
-<a href="./index.html ">Terug naar homepage Social Bubble</a>
-</nav>
 <div class="page-nav">
 		<nav class="sticky">
 			<ul>
-				<li><a href="#Wat is een social bubble">Wat is een social bubble?</a>
-					<li><a href="#Zit jij in een social bubble?">Zit jij in een social bubble?</a>
-						<li><a href="#Social media gebruikers">Social media gebruikers </a>
-							<li><a href="#contact">Contact</a>
-								<li><a href="overons.html">Over ons</a>
+				<li><a href="./index.html#Wat is een social bubble?">Wat is een social bubble?</a>
+					<li><a href="./index.html#Zit jij in een social bubble?">Zit jij in een social bubble?</a>
+						<li><a href="./index.html#Social media gebruikers">Social media gebruikers </a>
+							<li><a href="./index.html#contact">Contact</a>
+								<li><a href="./index.html">Terug naar homepage Social Bubble</a>
 									<ul>
 		</nav>
 	</div>
