media query toegevoegd, Bij max 375px achttergrond rood.

--- a/overons.html
+++ b/overons.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html>
- 
+
 <head>
-  <title>Social Bubble</title>
-  <link href="https://fonts.googleapis.com/css?family='Open Sans', sans-serif rel=" stylesheet ">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Social Bubble</title>
+	<link href="https://fonts.googleapis.com/css?family='Open Sans', sans-serif rel=" stylesheet ">
 <link rel="stylesheet " href="overons.css ">
 <link rel='icon' href='/images/favicon_soc_bub.ico' />
 </head>
 <body>
-<div class="page-nav">
-		<nav class="sticky">
+<div class="page-nav ">
+		<nav class="sticky ">
 			<ul>
-				<li><a href="./index.html#Wat is een social bubble?">Wat is een social bubble?</a>
-					<li><a href="./index.html#Zit jij in een social bubble?">Zit jij in een social bubble?</a>
-						<li><a href="./index.html#Social media gebruikers">Social media gebruikers </a>
-							<li><a href="./index.html#contact">Contact</a>
-								<li><a href="./index.html">Terug naar homepage Social Bubble</a>
+				<li><a href="./index.html#Wat is een social bubble? ">Wat is een social bubble?</a>
+					<li><a href="./index.html#Zit jij in een social bubble? ">Zit jij in een social bubble?</a>
+						<li><a href="./index.html#Social media gebruikers ">Social media gebruikers </a>
+							<li><a href="./index.html#contact ">Contact</a>
+								<li><a href="./index.html ">Terug naar homepage Social Bubble</a>
 									<ul>
 		</nav>
 	</div>
-<div class="content">
-		<div class="header">
+<div class="content ">
+		<div class="header ">
 <div class="page-content ">
 <h1>Over ons</h1>
  
  <h2>Over Dymphna</h2>
- <img src="https://z-p3-scontent-amt2-1.xx.fbcdn.net/v/t1.0-9/67659763_2362654283789613_4037330225300766720_n.jpg?_nc_cat=102&_nc_sid=85a577&_nc_ohc=XmKtTm8pWHQAX9Hmi0u&_nc_ht=z-p3-scontent-amt2-1.xx&oh=f621cf2b097e589678f7d33eba0be3b4&oe=5EA1BCC6"width= 600 height= 300>
+ <img src="https://z-p3-scontent-amt2-1.xx.fbcdn.net/v/t1.0-9/67659763_2362654283789613_4037330225300766720_n.jpg?_nc_cat=102&_nc_sid=85a577&_nc_ohc=XmKtTm8pWHQAX9Hmi0u&_nc_ht=z-p3-scontent-amt2-1.xx&oh=f621cf2b097e589678f7d33eba0be3b4&oe=5EA1BCC6 "width= 600 height= 300>
 <p>
 Mijn naam is <b>Dymphna Geels.</b> Ik woon in Voorburg. Ik vind het leuk om te voetballen, ik speel voor Forum Sport. Ik train 2 keer per week en op zaterdag heb ik een westrijd. Ik zit op het Sint-Maartenscollege in Voorburg in 4 vwo.
 </p>
